# multidimensional-map

./: .gitignore  README.md  multidimensional-map.cabal  nested-map.cabal  test.hs
benchmark/: Benchmark.hs
src/Data/Map/: Multidimensional.hs
src/Data/Map/Multidimensional/: Class.hs  Flat.hs  GADT.hs  Nested.hs
